--- a/5500 HW2.md
+++ b/5500 HW2.md
@@ -1,4 +1,13 @@
 
+### Problem 2
+### For Manvita Markala's visualization.(Link https://github.com/manvitamarkala/DS-5500---HW1). This visualization effectively show us the distribution of income across countries and also the trend of income’s growth by time. Mine is similar to this one, as we both used static line plot and denote different regions by color. I like the plot in which the author also make a visualization on countries level, which provide additional information, although it’s kind of hard to read those large number of lines in detail. Overall, I think the visualization is effective and easy to interpret.
+
+
+### Problem 3
+### For Nick Tyler’s visualization project. (Link https://github.com/tylernickr/DS5500/tree/master/hw1). This visualization is generated in R but is very similar to the one before and mine which are from python. We both use static line plots and the idea are pretty much the same. One thing to notice is Noah also add a bar plot to visualize distribution across region, which I think is a good idea as bar plot is easier to interpret as it has steady scale as measurement. The ordering of bars also provides an easy interpretation of the rank of incomes. Overall, I think the visualization is effective and easy to interpret.
+
+### Problem 4,5
+
 
 ```python
 import pandas as pd
@@ -229,7 +238,7 @@ gdp_life_plot = sns.regplot("gdppercapita_us_inflation_adjusted", "life_expectan
     
 
 
-![png](output_7_1.png)
+![png](output_10_1.png)
 
 
 
@@ -243,7 +252,7 @@ gdp_life_plot = sns.regplot("gdppercapita_us_inflation_adjusted", "residual", da
     
 
 
-![png](output_8_1.png)
+![png](output_11_1.png)
 
 
 
@@ -354,7 +363,7 @@ gdp_life_plot = sns.regplot("log_gdp", "life_expectancy_years", data = df_final,
     
 
 
-![png](output_12_1.png)
+![png](output_15_1.png)
 
 
 
@@ -368,7 +377,7 @@ gdp_life_plot = sns.regplot("log_gdp", "residual", data = df_final,
     
 
 
-![png](output_13_1.png)
+![png](output_16_1.png)
 
 
 # Problem 5
@@ -575,7 +584,7 @@ gdp_life_plot = sns.regplot("gdppercapita_us_inflation_adjusted", "newborn_morta
     
 
 
-![png](output_18_1.png)
+![png](output_21_1.png)
 
 
 
@@ -589,7 +598,7 @@ gdp_life_plot = sns.regplot("gdppercapita_us_inflation_adjusted", "residual", da
     
 
 
-![png](output_19_1.png)
+![png](output_22_1.png)
 
 
 
@@ -697,7 +706,7 @@ gdp_life_plot = sns.regplot("log_gdp", "log_mort", data = df_final,
     
 
 
-![png](output_22_1.png)
+![png](output_25_1.png)
 
 
 
@@ -711,7 +720,7 @@ gdp_life_plot = sns.regplot("log_gdp", "residual", data = df_final,
     
 
 
-![png](output_23_1.png)
+![png](output_26_1.png)
 
 
 
